# MiddleAgeEconomySim

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Checklist.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync-main-to-wiki.yml  sync-wiki-to-main.yml
docs/: GITHUB_ISSUES_READY.md  ISSUE_DETECTION_SYSTEM.md  PROJECT_ISSUES.md  issue_tracking.json
docs/github_issue_templates/: issue_01_bug_Price_volatility_compounds_i.md  issue_02_bug_Market_history_vectors_grow_.md  issue_03_warning_Compilation_warnings_for_un.md  issue_04_enhancement_Major_implemented_features_n.md  issue_05_task_Phase_1_implementation_tasks.md  issues_summary.json
include/agent/: agent.h  government.h  loan_provider.h  person.h
include/market/: business.h  loan.h  market.h  transaction.h
include/system/: trade_route.h
scripts/: continuous_issue_tracker.py
src/: agent.cpp  main.cpp
tests/: CMakeLists.txt
tests/agent_tests/: agent_test.cpp  government_test.cpp  loan_provider_test.cpp  person_test.cpp
tests/market_tests/: business_test.cpp  loan_test.cpp  market_test.cpp  transaction_test.cpp
tests/system_tests/: integration_test.cpp  trade_route_test.cpp
wiki/: Branch-Strategy.md  Coding-Standards.md  High_Level_Design.md  Home.md  Low_Level_Design.md  Requirement.md  Testing-Guidelines.md  Testing‐Guidelines.md
